<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorActivity"
    android:padding="16dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</FrameLayout>


