<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@color/colorActivity"
    android:orientation="vertical"
    android:padding="16dp">


    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="150dp"
        android:scrollbarStyle="insideInset"
        style="@android:style/Widget.Holo.ScrollView"
        android:clipToPadding="false"
        android:scrollIndicators="top|bottom"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:isScrollContainer="false"
        android:fillViewport="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/recipe_detail_text"
            android:padding="15dp" />
    </ScrollView>

        <android.support.v7.widget.RecyclerView
            android:layout_margin="15dp"
            android:id="@+id/recipe_detail_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"     />


</LinearLayout>


