<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/colorActivity">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/thumbImage"
        android:layout_gravity="left"
        android:paddingRight="15dp"
        android:elevation="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="#000"
        android:id="@+id/recipe_step_detail_text"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previousStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/leftchevron"
            android:backgroundTintMode="src_over"
            android:elevation="6dp"
            android:padding="40dp" />

        <Button
            android:id="@+id/nextStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rightchevron"
            android:backgroundTintMode="src_over"
            android:padding="40dp" />
    </LinearLayout>


</LinearLayout>


